--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,6 +1,6 @@
 <div th:fragment="navbar">
-    <nav class="navbar navbar-light bg-light">
-        <a href="#" class="navbar-brand">
+    <nav class="navbar">
+        <a href="/" class="navbar-brand">
             <img src="/images/logo.png" height="60" alt="NbaNews">
         </a>
         <ul class="nav justify-content-end">
@@ -28,4 +28,5 @@
             </li>
         </ul>
     </nav>
+    <hr/>
 </div>
