--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,6 +24,8 @@
                 integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
                 crossorigin="anonymous"></script>
 
+        <script src="/js/jquery-3.6.1.min.js"></script>
+
         <script src="/js/script.js" defer></script>
         <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
