the "back to top" button has been added, the names of the selected files are now displayed and the chat has been optimized

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,8 +25,8 @@
                 crossorigin="anonymous"></script>
 
         <script src="/js/jquery-3.6.1.min.js"></script>
-
         <script src="/js/script.js" defer></script>
+        <script src="/js/backToTop.js" defer></script>
         <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
 </div>
