--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -75,3 +75,10 @@ hr {
     margin-bottom: 20px;
     padding-bottom: 10px;
 }
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+}
