--- a/src/main/resources/templates/fragments/addNews.html
+++ b/src/main/resources/templates/fragments/addNews.html
@@ -5,21 +5,21 @@
                 <div class="text-center split right modal-body">
                     <form method="post" action="/" enctype="multipart/form-data">
                         <div>
-                            <textarea class="form-control mb-3" name="title" id="title"
-                                      placeholder="Title"></textarea>
+                            <textarea class="form-control mb-3" name="title" id="title" placeholder="Title"></textarea>
                         </div>
                         <div class="custom-file mb-3">
-                            <input type="file" name="image" class="custom-file-input" id="image">
-                            <label class="custom-file-label" for="image">Select image</label>
+                            <label class="custom-file-label" for="image" id="image-label">Select image</label>
+                            <input type="file" name="image" class="custom-file-input" id="image"
+                                   onchange="getFileName('image')">
                         </div>
                         <div class="mb-3">
                             <input type="url" class="form-control" name="source" id="source" placeholder="Source url">
                         </div>
                         <div class="custom-file mb-3">
-                            <input type="file" name="sourceLogo" class="custom-file-input"
-                            id="sourceLogo" >
-                            <label class="custom-file-label" for="sourceLogo">Select source
+                            <label class="custom-file-label" for="sourceLogo" id="sourceLogo-label">Select source
                                 logo</label>
+                            <input type="file" name="sourceLogo" class="custom-file-input" id="sourceLogo"
+                                   onchange="getFileName('sourceLogo')">
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
