--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,57 +5,59 @@
 <div th:include="/fragments/navbar :: navbar"></div>
 <div class="container">
     <div class="horizontal-center">
-        <table id="news-table">
-            <tbody>
-            <tr th:each="news1 : ${news}">
-                <div class="card-container">
-                    <div hidden th:text="${news1.id}"></div>
-                    <div class="card rounded">
-                        <img th:src=" ${news1.image} ? *{'data:image/jpeg;base64,'+news1.image} : ''"
-                             class="card-img-top rounded">
-                        <div class="card-body">
-                            <h5 class="card-title" th:text="${news1.title}"></h5>
+        <tr th:each="news1 : ${news}">
+            <div class="card-container">
+                <div hidden th:text="${news1.id}"></div>
+                <div class="card rounded">
+                    <img th:src=" ${news1.image} ? *{'data:image/jpeg;base64,'+news1.image} : ''"
+                         class="card-img-top rounded">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${news1.title}"></h5>
+                        <div>
                             <div>
-                                <div>
-                                    <!-- Здесь будет переменная, проверяющая какую оценку поставил пользователь: 1 - лайк, -1-дизлайк, 0-нет оценки -->
-                                    <button class="btn like" type="button">
-                                        <img th:src="1==1 ? '/images/icons/hand-thumbs-up-fill.svg' : '/images/icons/hand-thumbs-up.svg'">
-                                    </button>
-                                    <button class="btn dislike" type="button">
-                                        <img th:src="0==-1 ? '/images/icons/hand-thumbs-down-fill.svg' : '/images/icons/hand-thumbs-down.svg'">
-                                    </button>
-                                    <button th:id="${news1.id}" class="btn chat" type="button"
-                                            data-bs-toggle="collapse"
-                                            th:attr="data-bs-target=${'#collapseExample' + news1.id}"
-                                            aria-expanded="false" aria-controls="collapseExample">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
-                                             fill="currentColor" class="bi bi-chat-left" viewBox="0 0 16 16">
-                                            <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-                                        </svg>
-                                    </button>
-                                    <a class="source-logo"
-                                       th:href="${news1.source}">
-                                        <img th:src=" ${news1.sourceLogo} ? *{'data:image/jpeg;base64,'+news1.sourceLogo} : ''">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
-                                            <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
-                                            <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
-                                        </svg>
-                                    </a>
-                                </div>
-                                <div class="editor-info">
-                                    <p class="text-center" th:text="${news1.newsTime}"></p>
-                                    <p class="text-center">Nickname</p>
-                                </div>
+                                <!-- Здесь будет переменная, проверяющая какую оценку поставил пользователь: 1 - лайк, -1-дизлайк, 0-нет оценки -->
+                                <button class="btn like" type="button">
+                                    <img th:src="1==1 ? '/images/icons/hand-thumbs-up-fill.svg' : '/images/icons/hand-thumbs-up.svg'">
+                                </button>
+                                <button class="btn dislike" type="button">
+                                    <img th:src="0==-1 ? '/images/icons/hand-thumbs-down-fill.svg' : '/images/icons/hand-thumbs-down.svg'">
+                                </button>
+                                <button th:id="${news1.id}" class="btn chat" type="button"
+                                        data-bs-toggle="collapse"
+                                        th:attr="data-bs-target=${'#collapseExample' + news1.id}"
+                                        aria-expanded="false" aria-controls="collapseExample">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                                         fill="currentColor" class="bi bi-chat-left" viewBox="0 0 16 16">
+                                        <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                                    </svg>
+                                </button>
+                                <a class="source-logo"
+                                   th:href="${news1.source}">
+                                    <img th:src=" ${news1.sourceLogo} ? *{'data:image/jpeg;base64,'+news1.sourceLogo} : ''">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
+                                         fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                              d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
+                                        <path fill-rule="evenodd"
+                                              d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
+                                    </svg>
+                                </a>
+                            </div>
+                            <div class="editor-info">
+                                <p class="text-center" th:text="${news1.newsTime}"></p>
+                                <p class="text-center">Nickname</p>
                             </div>
                         </div>
                     </div>
-                    <div class="collapse" th:id="${'collapseExample'+ news1.id}">
-                        <div class="card card-footer">
-                            <ul class="list-group" th:id="${'message-list' + news1.id}"></ul>
-                            <br/>
-                            <div class="input-group">
-                                <input th:id="${'send-message' + news1.id}" type="text" class="form-control border-end-0 border rounded">
-                                <span class="input-group-append">
+                </div>
+                <div class="collapse" th:id="${'collapseExample'+ news1.id}">
+                    <div class="card card-footer">
+                        <ul class="list-group" th:id="${'message-list' + news1.id}"></ul>
+                        <br/>
+                        <div class="input-group">
+                            <input th:id="${'send-message' + news1.id}" type="text"
+                                   class="form-control border-end-0 border rounded">
+                            <span class="input-group-append">
                                 <button th:id="${news1.id}"
                                         class="btn btn-outline-secondary bg-white  border rounded-pill ms-n5 send-msg-btn"
                                         type="button" style="z-index: 0">
@@ -65,13 +67,11 @@
                                     </svg>
                                 </button>
                             </span>
-                            </div>
                         </div>
                     </div>
                 </div>
-            </tr>
-            </tbody>
-        </table>
+            </div>
+        </tr>
     </div>
 
     <div>
@@ -107,6 +107,14 @@
             <div th:include="/fragments/addNews :: addNews"></div>
         </div>
     </div>
+</div>
+<div>
+    <button type="button" class="btn btn-dark btn-floating btn-lg" id="btn-back-to-top">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+             class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+        </svg>
+    </button>
 </div>
 </body>
 </html>
