--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -82,3 +82,16 @@ hr {
     right: 20px;
     display: none;
 }
+
+.row {
+    margin-left: 20px;
+}
+
+td, th {
+    text-align: center;
+}
+
+#isAdmin, #isUser,#isEditor {
+    margin-left: 10px;
+    margin-right: 10px;
+}
