--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -27,6 +27,7 @@
         <script src="/js/jquery-3.6.1.min.js"></script>
         <script src="/js/script.js" defer></script>
         <script src="/js/backToTop.js" defer></script>
+        <script src="/js/users.js" defer></script>
         <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
 </div>
