--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -21,8 +21,8 @@
                     </a>
 
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="nav-link" href="#">Settings</a>
-                        <a class="nav-link" href="#">Logout</a>
+                        <a class="nav-link" href="#" id="profile">Settings</a>
+                        <a class="nav-link" href="#" id="logout-btn">Logout</a>
                     </div>
                 </div>
             </li>
