--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,10 +24,14 @@
                 integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
                 crossorigin="anonymous"></script>
 
-        <script src="/js/jquery-3.6.1.min.js"></script>
+        <script src="/js/jquery-3.6.1.min.js" defer></script>
         <script src="/js/script.js" defer></script>
         <script src="/js/backToTop.js" defer></script>
         <script src="/js/users.js" defer></script>
+        <script src="/js/news.js" defer></script>
         <link rel="stylesheet" type="text/css" href="/css/style.css">
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js" defer></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
     </head>
 </div>
