--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -7,7 +7,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
             </li>
-            <li class="nav-item"  id="news">
+            <li class="nav-item" id="news">
                 <a class="nav-link" href="/news">News</a>
             </li>
             <li class="nav-item" sec:authorize="hasRole('ADMIN')">
@@ -15,14 +15,13 @@
             </li>
             <li class="nav-item">
                 <div class="dropdown show">
-                    <a class="nav-link" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">
-                        Profile
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="/images/icons/person-circle.svg" width="30" height="30" class="rounded-circle">
                     </a>
-
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="nav-link" href="#" id="profile">Settings</a>
-                        <a class="nav-link" href="#" id="logout-btn">Logout</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item nav-link" href="/profile/settings">Settings</a>
+                        <a class="dropdown-item nav-link" href="" id="logout-btn">Log Out</a>
                     </div>
                 </div>
             </li>
